--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,6 @@
+@use 'utilities';
+@use 'config';
+@use 'btnConfig';
 
 * {
   box-sizing: border-box;
@@ -6,8 +9,8 @@
 }
 
 body {
-  background-color: $light-color;
-  font-family: $font-stack;
+  background-color: config.$light-color;
+  font-family: config.$font-stack;
   line-height: 1;
 }
 
@@ -20,6 +23,62 @@ a {
 }
 
 .hero {
+  margin-top: .5rem;
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    ul {
+      display: flex;
+      list-style: none;
+
+      li {
+        padding: 0rem .5rem;
+
+        a {
+          display: inline-block;
+          padding: 10px 10px;
+          border-radius: 10px;
+          background-color: config.$light-color; 
+          transition: background-color 0.3s ease, opacity 0.3s ease,
+            transform 0.3s ease, text-decoration 0.3s ease;
+
+          &:hover {
+            color: config.$primary-color;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            transform: scale(1.05);
+            background-color: rgba(
+              config.$light-color,
+              0.8
+            ); 
+          }
+
+          &:active {
+            color: config.$secondary-color;
+          }
+
+          &:visited {
+            color: config.$primary-color;
+          }
+        }
+      }
+    }
+  }
+
+  .hero-content {
+    margin-top: 1rem;
+
+    h1 {
+      font-size: 4rem;
+    }
+
+    img {
+      max-width: 100%;
+    }
+  }
+
   // This is where the bulk of the SCSS styling needs to be done
 
   // Take a look at the other files we've built already. How can they be useful here?
@@ -32,7 +91,7 @@ a {
 
 // This code is related to some of the aspects of SCSS we have yet to cover.
 // While you don't have to mess with it, it would be advisable to attempt to understand its functionality.
-$spaceamounts: (1,2,3,4,5);
+$spaceamounts: (1, 2, 3, 4, 5);
 
 @each $space in $spaceamounts {
   .m-#{$space} {
